Add Ubuntu runner to superlinter workflow

--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -1,5 +1,6 @@
 jobs:
   test:
+    runs-on: ubuntu-latest
     steps:
       - name: 23f2005552@ds.study.iitm.ac.in
         run: echo "Hello, world!"
