--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -1,7 +1,20 @@
+name: Lint Code Base
+
+on: [push, pull_request]
+
 jobs:
-  test:
+  lint:
     runs-on: ubuntu-latest
+
     steps:
       - name: 23f2005552@ds.study.iitm.ac.in
         run: echo "Hello, world!"
-      
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      # - name: Run Super-Linter
+      #   uses: super-linter/super-linter@v6.6.0
+      #   env:
+      #     VALIDATE_ALL_CODEBASE: true
+      #     DEFAULT_BRANCH: main
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
